US7 - added method getKafkaProps